kubernetes/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myblog

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      name: mysql
  selector:
    app: mysql
  type: LoadBalancer

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: "mysql"
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: mysql:8.0.14
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-claim
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-claim
      spec:
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        selector:
          matchLabels:
            name: pv1
        resources:
          requests:
            storage: 10M

---

apiVersion: v1
kind: Service
metadata:
  name: myblog-app
  namespace: myblog
  labels:
    app: myblog-app
spec:
  ports:
    - port: 3000
      targetPort: myblog-port
  selector:
    app: myblog-app
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myblog-app
  namespace: myblog
  labels:
    app: myblog-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myblog-app
  template:
    metadata:
      labels:
        app: myblog-app
    spec:
      containers:
        - name: myblog
          image: cflynnus/myblog:latest
          ports:
            - name: myblog-port
              containerPort: 4444 #random
