kubernetes/local.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog

---

apiVersion: v1
kind: Service
metadata:
  name: blog-app
  namespace: blog
  labels:
    app: blog-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: blog-port
      protocol: TCP
      name: http
  selector:
    app: blog-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-app
  namespace: blog
  labels:
    app: blog-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-app
  template:
    metadata:
      labels:
        app: blog-app
    spec:
      containers:
        - name: blog
          image: cflynnus/myblog:latest
          ports:
            - name: blog-port
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
