kubernetes/master.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${PROJECT_NAME}-${CIRCLE_BRANCH}

---

apiVersion: v1
kind: Service
metadata:
  name: ${PROJECT_NAME}-app
  namespace: ${PROJECT_NAME}-${CIRCLE_BRANCH}
  labels:
    app: ${PROJECT_NAME}-app
spec:
  type: LoadBalancer
  loadBalancerIP: "35.193.9.147"
  ports:
    - port: 80
      targetPort: ${PROJECT_NAME}-port
      protocol: TCP
      name: http
  selector:
    app: ${PROJECT_NAME}-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${PROJECT_NAME}-app
  namespace: ${PROJECT_NAME}-${CIRCLE_BRANCH}
  labels:
    app: ${PROJECT_NAME}-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${PROJECT_NAME}-app
  template:
    metadata:
      labels:
        app: ${PROJECT_NAME}-app
    spec:
      containers:
        - name: ${PROJECT_NAME}
          image: cflynnus/${PROJECT_NAME}:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
          ports:
            - name: ${PROJECT_NAME}-port
              containerPort: 80
