kubernetes/cloud.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${PROJECT_NAME}

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: ${PROJECT_NAME}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /develop
        backend:
          serviceName: blog-develop-app
          servicePort: blog-port

---

apiVersion: v1
kind: Service
metadata:
  name: ${PROJECT_NAME}-${CIRCLE_BRANCH}-app
  namespace: ${PROJECT_NAME}
  labels:
    app: ${PROJECT_NAME}-${CIRCLE_BRANCH}-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: ${PROJECT_NAME}-port
      protocol: TCP
      name: http
  selector:
    app: ${PROJECT_NAME}-${CIRCLE_BRANCH}-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${PROJECT_NAME}-${CIRCLE_BRANCH}-app
  namespace: ${PROJECT_NAME}
  labels:
    app: ${PROJECT_NAME}-${CIRCLE_BRANCH}-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${PROJECT_NAME}-${CIRCLE_BRANCH}-app
  template:
    metadata:
      labels:
        app: ${PROJECT_NAME}-${CIRCLE_BRANCH}-app
    spec:
      containers:
        - name: ${PROJECT_NAME}
          image: cflynnus/${PROJECT_NAME}:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
          ports:
            - name: ${PROJECT_NAME}-port
              containerPort: 80
